tests/paczka1/fuzzy1/99719319.err
Error in line 3: mu6 S307 45,1
Error in line 34: IHjPCmG S877 60,2
